--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,10 @@
-hi its kimberly 
+<!DOCTYPE html>
+ <html>
+<head>
+<title>hello</title>
+</head>
+<body>
+<h1>Kimberly Vo</h1>
+<p> Hello i'm Kimberly! I am a rising senior at Chantilly High School.</p>
+</body>
+</html>
