--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,8 @@
 <p> Hello i'm Kimberly! I am a rising senior at Chantilly High School.</p>
 <h1>Likes and Dislikes</h1>
  <h1>Fun Facts</h1>
+ <h1>Favorite Tech</h1>
+ <h1>Projects</h1>
 </body>
 </html>
 
