--- a/aboutme.html
+++ b/aboutme.html
@@ -7,8 +7,12 @@
 <h1>Kimberly Vo</h1>
 <p> Hello i'm Kimberly! I am a rising senior at Chantilly High School.</p>
 <h2>Likes and Dislikes</h2>
+ <p> One of my favorite hobbies is shopping. I like the fact that clothes can be used as a reflection of you personality. </p>
+ <p> Things I dislike include bugs, olives, and mosquitoes </p>
  <h2>Fun Facts</h2>
+ <p> I can't walk in a straight line </p>
  <h2>Favorite Tech</h2>
+ <p> I spend a lot of time on my phone using apps like Snapchat, Tumblr, and YouTube
  <h2>Projects</h2>
 </body>
 </html>
