--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
  <h2>Fun Facts</h2>
  <p> I can't walk in a straight line </p>
  <h2>Favorite Tech</h2>
- <p> I spend a lot of time on my phone using apps like Snapchat, Tumblr, and YouTube
+ <p> I spend a lot of time on my phone using apps like Snapchat, Tumblr, and YouTube </p>
  <h2>Projects</h2>
 </body>
 </html>
