--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Kimberly Vo</h1> 
- <img src="Kimberly.jpg" width="500" hieght="500">
+ <img src="https://github.com/kimberlyvo21/portfolio/blob/master/Kimberl.jpg" width="500" hieght="500">
 <p> Hello i'm Kimberly! I am a rising senior at Chantilly High School.</p>
 <h2>Likes and Dislikes</h2>
  <p> One of my favorite hobbies is shopping. I like the fact that clothes can be used as a reflection of you personality. </p>
