--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
 <title>Kimberly Vo</title>
 </head>
-<body style="background-color:powderblue;">
+<body style="background-color:grey;">
 <h1>Kimberly Vo</h1> 
  <img src="kimberly.jpg" width="500" hieght="500">
 <p> Hello i'm Kimberly! I am a rising senior at Chantilly High School.</p>
