--- a/aboutme.html
+++ b/aboutme.html
@@ -4,12 +4,7 @@
 <title>Kimberly Vo</title>
 </head>
 <body style="background-color:grey;">
- .header, .footer {
-    background-color:blue;
-    color:white;
-    padding:15px;
-}
-<h1>Kimberly Vo</h1> 
+<h1 style="text-align;">Kimberly Vo</h1> 
  <img src="kimberly.jpg" width="500" hieght="500">
 <p> Hello i'm Kimberly! I am a rising senior at Chantilly High School.</p>
 <h2>Likes and Dislikes</h2>
@@ -22,5 +17,4 @@
  <h2>Projects</h2>
 </body>
 </html>
-
 
