--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,8 @@
 <title>Kimberly Vo</title>
 </head>
 <body style="background-color:grey;">
-<h1 style="text-align;">Kimberly Vo</h1> 
- <img src="kimberly.jpg" width="500" hieght="500">
+<h1 style="text-align:center;">Kimberly Vo</h1> 
+ <img style="img-align:center src="kimberly.jpg" width="500" hieght="500">
 <p> Hello i'm Kimberly! I am a rising senior at Chantilly High School.</p>
 <h2>Likes and Dislikes</h2>
  <p> One of my favorite hobbies is shopping. I like the fact that clothes can be used as a reflection of you personality. </p>
