--- a/aboutme.html
+++ b/aboutme.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
  <html>
 <head>
+ <head>
+<style>
+.city {
+   float: left;
+   margin: 10px;
+   padding: 10px;
+   max-width: 300px;
+   height: 300px;
+   border: 1px solid black;
+}   
+</style>
 <title>Kimberly Vo</title>
 </head>
 <body style="background-color:grey;">
 <h1 style="text-align:center;">Kimberly Vo</h1> 
  <img src="kimberly.jpg" width="500" hieght="500">
 <p> Hello i'm Kimberly! I am a rising senior at Chantilly High School.</p>
+ <div class="content">
 <h2>Likes and Dislikes</h2>
  <p> One of my favorite hobbies is shopping. I like the fact that clothes can be used as a reflection of you personality. </p>
  <p> Things I dislike include bugs, olives, and mosquitoes </p>
+ </div>
+ <div class="city">
  <h2>Fun Facts</h2>
  <p> I can't walk in a straight line </p>
+ </div>
+ <div class="city">
  <h2>Favorite Tech</h2>
  <p> I spend a lot of time on my phone using apps like Snapchat, Tumblr, and YouTube </p>
+ </div>
+ <div class="city">
  <h2>Projects</h2>
+ </div>
 </body>
 </html>
 
