--- a/aboutme.html
+++ b/aboutme.html
@@ -23,15 +23,15 @@
  <p> One of my favorite hobbies is shopping. I like the fact that clothes can be used as a reflection of you personality. </p>
  <p> Things I dislike include bugs, olives, and mosquitoes </p>
  </div>
- <div class="city">
+ <div class="content">
  <h2>Fun Facts</h2>
  <p> I can't walk in a straight line </p>
  </div>
- <div class="city">
+ <div class="content">
  <h2>Favorite Tech</h2>
  <p> I spend a lot of time on my phone using apps like Snapchat, Tumblr, and YouTube </p>
  </div>
- <div class="city">
+ <div class="content">
  <h2>Projects</h2>
  </div>
 </body>
