--- a/aboutme.html
+++ b/aboutme.html
@@ -14,8 +14,8 @@
 </style>
 <title>Kimberly Vo</title>
 </head>
-<body style="background-color:grey;">
-<h1 style="text-align:center;">Kimberly Vo</h1> 
+<body style="background-color:#e0e0d1;">
+<h1 style="text-align:center; color:#ff6666; font-family:copperplate;">Kimberly Vo</h1> 
 <p style="text-align:center;"> Hello I'm Kimberly! I am a rising senior at Chantilly High School.</p>
  <img src="kimberly.jpg" width="350" hieght="350">
  <div class="content">
