--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
 <title>Kimberly Vo</title>
 </head>
 <body style="background-color:#e0e0d1;">
-<h1 style="text-align:center; color:#ff6666; font-family:copperplate;">Kimberly Vo</h1> 
+<h1 style="text-align:center; color:#ff6666; font-family:times;">Kimberly Vo</h1> 
 <p style="text-align:center;"> Hello I'm Kimberly! I am a rising senior at Chantilly High School.</p>
  <img src="kimberly.jpg" width="350" hieght="350">
  <div class="content">
