--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
 <p style="text-align:center;"> Hello I'm Kimberly! I am a rising senior at Chantilly High School.</p>
  <img src="kimberly.jpg" width="350" hieght="350">
  <div class="content">
-<h2 style="color:#ff6666;>Likes and Dislikes</h2>
+<h2 style="color:#ff6666;">Likes and Dislikes</h2>
  <p> One of my favorite hobbies is shopping. I like the fact that clothes can be used as a reflection of you personality. </p>
  <p> Things I dislike include bugs, olives, and mosquitoes </p>
  </div>
@@ -28,11 +28,11 @@
  <p> I can't walk in a straight line </p>
  </div>
  <div class="content">
- <h2 style="color:#ff6666;>Favorite Tech</h2>
+ <h2 style="color:#ff6666;">Favorite Tech</h2>
  <p> I spend a lot of time on my phone using apps like Snapchat, Tumblr, and YouTube </p>
  </div>
  <div class="content">
- <h2 style="color:#ff6666;>Projects</h2>
+ <h2 style="color:#ff6666;">Projects</h2>
  </div>
 </body>
 </html>
