--- a/aboutme.html
+++ b/aboutme.html
@@ -33,6 +33,7 @@
  </div>
  <div class="content">
  <h2 style="color:#ff6666;">Projects</h2>
+  <img src="game.jpg" width="200" hieght="200">                         
  </div>
 </body>
 </html>
