--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
  <p> Things I dislike include bugs, olives, and mosquitoes </p>
  </div>
  <div class="content">
- <h2 style="color:#ff6666;>Fun Facts</h2>
+ <h2 style="color:#ff6666;">Fun Facts</h2>
  <p> I can't walk in a straight line </p>
  </div>
  <div class="content">
