--- a/aboutme.html
+++ b/aboutme.html
@@ -35,6 +35,7 @@
  <h2 style="color:#ff6666;">Projects</h2>
   <img src="game.jpg" width="100" hieght="100">  
   <img src="game2.jpg" width="100" hieght="100">  
+  <a href="https://scratch.mit.edu/projects/168126691/">Click here to check it out!</a>
  </div>
 </body>
     </html>
