--- a/Core4Template.html
+++ b/Core4Template.html
@@ -78,10 +78,10 @@
         <!-- Fill in the row for Functions -->
         <tr>
           <td><b>Functions</b></td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td> a part of the code that performs a task </td>
+          <td> parts of driving a car, opening the door, putting the key in the ignition, taking off the brake, putting car in drive. all these steps are fuctions </td>
+          <td> print("hello") </td>
+          <td>  change background </td>
         </tr>
 
       </table>
