--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
  <h2 style="color:#ff6666;">Projects</h2>
   <a href="https://scratch.mit.edu/projects/168126691/">Click here to check it out!</a>
   
-  <img src="game.jpg" width="100" hieght="100">  
+  <img src="game.jpg" width="100" hieght="100">  <onmouseover = img src="game.jpg" width="500" hieght="500">
   <img src="game2.jpg" width="100" hieght="100">  
  </div>
 </body>
