--- a/aboutme.html
+++ b/aboutme.html
@@ -37,6 +37,7 @@
   
   <img src="game.jpg" width="100" hieght="100">  <onmouseover = img src="game.jpg" width="500" hieght="500">
   <img src="game2.jpg" width="100" hieght="100">  
+  <button onclick="this.innerHTML=Date()">The time is?</button>
  </div>
 </body>
     </html>
