--- a/aboutme.html
+++ b/aboutme.html
@@ -15,6 +15,9 @@
 <title>Kimberly Vo</title>
 </head>
 <body style="background-color:#e0e0d1;">
+<button onclick="Age:17
+                 Birthday: 2/1/00
+                 Blood Type: O">BIO</button>
 <h1 style="text-align:center; color:#ff6666; font-family:times;">Kimberly Vo</h1> 
 <p style="text-align:center;"> Hello I'm Kimberly! I am a rising senior at Chantilly High School.</p>
  <img src="kimberly.jpg" width="350" hieght="350">
@@ -37,7 +40,7 @@
   
   <img src="game.jpg" width="100" hieght="100">  <onmouseover = img src="game.jpg" width="500" hieght="500">
   <img src="game2.jpg" width="100" hieght="100">  
-  <button onclick="this.innerHTML=Date()">The time is?</button>
+  
  </div>
 </body>
     </html>
