--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,10 @@
    max-width: 300px;
    height: 300px;
    border: 1px solid black;
-}   
+}  
+ body {
+    background-image: url("paper.gif");
+}
 </style>
 <title>Kimberly Vo</title>
 </head>
@@ -18,7 +21,7 @@
 <h1 style="text-align:center; color:#ff6666; font-family:times;">Kimberly Vo</h1> 
 <p style="text-align:center;"> Hello I'm Kimberly! I am a rising senior at Chantilly High School.</p>
  <img src="kimberly.jpg" width="350" hieght="350">
- <div class="content">
+ <div class="content; style="background-color:#e0e0d1">
   <button type="button" onclick='document.getElementById("demo").innerHTML = "Birthday: 2/1/00"'>Fact</button>
 <h2 style="color:#ff6666;">Likes and Dislikes</h2>
  <p> One of my favorite hobbies is shopping. I like the fact that clothes can be used as a reflection of you personality. </p>
